html/css/clock.css
.clock-app *::selection {
    background-color: transparent;
}

.clock-app-header {
    position: absolute;
    width: 100%;
    height: 7vh;
    top: 50vh;
    z-index: 99;
}

.clock-app-container {
    position: relative;
    display: flex;
    width: 100%;
    height: 100%;
    flex-direction: column;
    color: var(--main-color);
    background: var(--second-background-color);
}

.clock-app {
    font-family: 'SF Pro Display Regular';
    display: none;
    height: 107.5%;
    width: 100%;
    color: var(--main-color);
    background: var(--second-background-color);
    overflow: hidden;
}

.clock-app-tab {
    position: relative;
    display: none;
    flex-direction: column;
    width: 100%;
    /* margin-top: 32px; */
    flex: 1;
}

.clock-app-alarm-page {
    position: absolute;
    width: 100%;
    height: 100%;
}

.clock-app-alarm-add, .clock-app-alarm-add-label {
    left: 100%;
}

.clock-add-alarm-settings p {
    margin: 0 !important;
}

.clock-add-alarm-settings .settings-tab-description {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 4px;
}

#clock-alarm-label-option-input::placeholder {
    font-family: 'SF Pro Display Light';
}

#clock-alarm-label-option-input {
    width: 100%;
    font-size: 22px;
    text-indent: 12px;
    border: 1px solid var(--border-gray);
    font-family: 'SF Pro Display Light';
}

.clock-app-alarm-add-label-container {
    width: 100%;
    height: 93%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.clock-app-tab .global-app-header {
    height: unset;
    top: unset;
    margin-bottom: unset;
    padding-top: 40px;
    font-size: 16px;
    background: var(--main-background-color);
    border-bottom: 1px solid var(--main-black);
}

.clock-app-tab .global-app-header .blue-text:last-child {
    place-self: flex-end;
    position: unset;
}

.clock-app-tab-header {
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: bold;
    font-size: 16px;
    padding-top: 40px;
    border-bottom: 1px solid var(--calculator-button-hover);
    background: var(--main-background-color);
}

.clock-app-active {
    display: flex !important;
}

.clock-app-footer {
    /* height: 48px; */
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 16px;
    text-align: center;
    padding: 8px 16px;
    border-top: 1px solid var(--main-black);
    background: var(--main-background-color);
}

.clock-app-footer i {
    font-size: 26px;
}

.clock-app-footer p {
    font-size: 12px;
}

.clock-app-header-button {
    position: relative;
    float: left;
    width: 50%;
    height: 80%;
    text-align: center;
    line-height: 6vh;
    background: #0f0f0f;
    border-bottom: .3vh solid rgba(0, 0, 0, 0);
    font-family: 'SF Pro Display Regular';
    color: white;
    transition: .08s;
}
.clock-app-header-button:hover {
    background: #252525;
}
.clock-app-footer-selected p {
    color: #ff7c14;
}

.clock-app-footer-selected i {
    color: #ff7c14;
}
.clock-app-loaded {
    display: none;
    padding-left: 30vh;
    height: 62vh;
}
.clock-app-loading {
    position: absolute;
    top: 0;
    left: 0vh;
    display: block;
    height: 100%;
    width: 100%;
    overflow: hidden;
}

.stopwatch-timer {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 64px;
    font-size: 64px;
    background: var(--main-background-color);
    font-family: 'SF Pro Display Regular';
}

.clock-buttons {
    display: flex;
    align-items: center;
    background: var(--main-background-color);
    padding: 0 26px 16px 26px;
    justify-content: space-between;
    font-size: 14px;
    border-bottom: 1px solid var(--border-gray);
}

.clock-button {
    display: flex;
    width: 64px;
    height: 64px;
    align-items: center;
    justify-content: center;
    padding: 16px;
    border-radius: 50%;
    color: var(--main-background-color);
}

.clock-button p {
    font-size: 16px;
    margin: 0 !important;
}

.clock-button[data-type="lap"] {
    background: var(--main-dark-gray);
    border: 2px solid var(--main-darker-gray);
}

.clock-button[data-type="clear"] {
    background: #000000;
    border: 2px solid #313131;
}

.clock-button[data-type="start"] {
    background: var(--main-green);
    border: 2px solid var(--main-darker-green);
}

.clock-button[data-type="stop"] {
    background: var(--main-red);
    border: 2px solid var(--main-darker-red);
}

.stopwatch-lap-list {
    overflow: auto;
    max-height: 25.7vh;
}

.stopwatch-lap {
    display: flex;
    justify-content: space-between;
    font-size: 16px;
    padding: 0 16px;
    border-bottom: 1px solid var(--border-gray);
    background: var(--main-background-color);
}

.stopwatch-lap:last-child {
    border-bottom: none;
}

.stopwatch-lap p {
    margin: 8px;
}

.stopwatch-lap-list::-webkit-scrollbar {
    position: absolute;
    width: .6vh;
}

.stopwatch-lap-list::-webkit-scrollbar-track {
    background-color: rgba(0, 0, 0, 0);
}

.stopwatch-lap-list::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.6);
    border-radius: 1vh 0 0 1vh;
}

.world-time {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 32px;
    background: var(--main-background-color);
}

.world-time:last-child {
    border-bottom: 1px solid var(--border-gray);
}

.world-time::after {
    content: "";
    width: 100%;
    margin-top: 22%;
    background: var(--border-gray);
    position: absolute;
    color: black;
    height: 1px;
}

.world-time:last-child::after {
    display: none;
}

.world-time p {
    margin: 0;
}

.world-time-info {
    display: flex;
    flex-direction: column;
}

.world-time-info p:first-child {
    font-size: 22px;
}

.world-time-info p:last-child {
    color: var(--main-dark-gray);
    font-family: 'SF Pro Display Light';
    font-size: 12px;
}

.world-time-clock {
    display: flex;
    align-items: flex-end;
}

.world-time-clock p:first-child {
    font-size: 48px;
}

.world-time-clock p:last-child {
    font-size: 22px;
    padding-bottom: 10px;
}

.clock-timer-setup-container {
    display: flex;
    border-bottom: 1px solid var(--border-gray);
    margin-bottom: 32px;
}

.clock-app-timer-setup {
    position: absolute;
    width: 100%;
}

.clock-timer-container #clock-timer-minute-picker {
    text-align: right;
    direction: rtl;
    text-indent: 8px;
}
.clock-timer-container #clock-timer-second-picker {
    text-align: left;
    text-indent: 8px;
}

.clone-scroller::-webkit-scrollbar {
    display: none;
}

.clock-app-timer-show {
    position: absolute;
    width: 100%;
    left: 100%;
    display: none;
}

.clock-app-timer-show-container-texts {
    display: flex;
    background: var(--main-background-color);
    padding-top: 64px;
    font-size: 64px;
    align-items: center;
    justify-content: center;
}

.clock-app-alarm-list-item {
    display: flex;
    flex-direction: column;
    padding: 0 22px 4px 22px;
    background: var(--main-background-color);
    border-bottom: 1px solid var(--border-gray);
}

.clock-app-alarm-list-item-description {
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
}
.clock-app-alarm-list-item-description span {
    font-size: 52px;
    font-family: 'SF Pro Display Light';
    margin: 0 0 -12px 0;
}
.clock-app-alarm-cycle-text {
    font-size: 16px;
    font-family: 'SF Pro Display Light';
}

.switch__container {
    width: 60px;
}

.switch {
    visibility: hidden;
    position: absolute;
    margin-left: -9999px;
}

.switch + label {
    display: block;
    position: relative;
    cursor: pointer;
    outline: none;
    user-select: none;
}

.switch--shadow + label {
    padding: 2px;
    width: 60px;
    height: 30px;
    background-color: #dddddd;
    border-radius: 60px;
}
.switch--shadow + label:before,
.switch--shadow + label:after {
    display: block;
    position: absolute;
    top: 1px;
    left: 1px;
    bottom: 1px;
    content: "";
}
.switch--shadow + label:before {
    right: 1px;
    background-color: #f1f1f1;
    border-radius: 60px;
    transition: background 0.4s;
}
.switch--shadow + label:after {
    width: 26px;
    height: 26px;
    background-color: #fff;
    border-radius: 100%;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
    transition: all 0.4s;
}
.switch--shadow:checked + label:before {
    background-color: #8ce196;
}
.switch--shadow:checked + label:after {
    transform: translateX(32px);
}

/* Estilo Flat */
.switch--flat + label {
    padding: 2px;
    width: 60px;
    height: 30px;
    background-color: #dddddd;
    border-radius: 60px;
    transition: background 0.4s;
}
.switch--flat + label:before,
.switch--flat + label:after {
    display: block;
    position: absolute;
    content: "";
}
.switch--flat + label:before {
    top: 2px;
    left: 2px;
    bottom: 2px;
    right: 2px;
    background-color: #fff;
    border-radius: 60px;
    transition: background 0.4s;
}
.switch--flat + label:after {
    top: 4px;
    left: 4px;
    bottom: 4px;
    width: 56px;
    background-color: #dddddd;
    border-radius: 52px;
    transition: margin 0.4s, background 0.4s;
}
.switch--flat:checked + label {
    background-color: #8ce196;
}
.switch--flat:checked + label:after {
    margin-left: 60px;
    background-color: #8ce196;
}

